--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "handlebars": "^4.7.6",
+    "lodash.debounce": "^4.0.8",
     "material-design-icons": "^3.0.1"
   }
 }
